add last viewed recipes
