# routes/user.js
@@ -27,7 +27,7 @@ router.use(async function (req, res, next) {
 router.post('/favorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
-    const recipe_id = req.body.recipeId;
+    const recipe_id = req.body.recipe_id;
     await user_utils.markAsFavorite(user_id,recipe_id);
     res.status(200).send("The Recipe successfully saved as favorite");
     } catch(error){
@@ -41,7 +41,6 @@ router.post('/favorites', async (req,res,next) => {
 router.get('/favorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
-    let favorite_recipes = {};
     const recipes_id = await user_utils.getFavoriteRecipes(user_id);
     let recipes_id_array = [];
     recipes_id.map((element) => recipes_id_array.push(element.webRecipeID)); //extracting the recipe ids into array
@@ -53,6 +52,38 @@ router.get('/favorites', async (req,res,next) => {
 });
 
 
+/**
+ * This path gets body with recipeId and save this recipe in the last viewed recipes of the logged-in user
+ */
+ router.post('/lastViewed', async (req,res,next) => {
+  try{
+    const user_id = req.session.user_id;
+    const recipe_id = req.body.recipe_id;
+    await user_utils.markAsLastViewed(user_id,recipe_id);
+    res.status(200).send("The Recipe successfully saved as favorite");
+    } catch(error){
+    next(error);
+  }
+})
 
+/**
+ * This path returns the last viewed recipes of the logged-in user
+ */
+ router.get('/lastViewed', async (req,res,next) => {
+    try
+    {
+      const user_id = req.session.user_id;
+      const recipes_id = await user_utils.getThreeLastViewed(user_id);
+      let recipes_id_array = [];
+      //extracting the recipe ids into array
+      recipes_id_array.push(recipes_id[0].lastViewedRecipe1); 
+      recipes_id_array.push(recipes_id[0].lastViewedRecipe2); 
+      recipes_id_array.push(recipes_id[0].lastViewedRecipe3); 
+      const results = await recipe_utils.getRecipesPreview(recipes_id_array);
+      res.status(200).send(results);
+      } catch(error){
+          next(error); 
+      }
+ })
 
 module.exports = router;
